Fix missing channeler recipes on server